Fix a bug related to opening tasks.txt and add user guide
Previous commit did not consider how parsing tasks from tasks.txt
file and tasks from user input require separate handling. User
guide added to let users understand how to use the Icarus chatbot.